# relaytrace

./: README.md
docs/: APPROVAL_CONTROL_PLANE_FEASIBILITY.md  APPROVAL_CONTROL_PLANE_SPEC_SEED.md  ARCHITECTURE_TWO_LAYER.md  AWS_ENTERPRISE_AGENTIC_PLATFORM_STANDARD.md  MVP_2W_EXECUTION_CHECKLIST.md  MVP_DECISION_GATES.md  MVP_DECISION_RECORD_V0.md  TRANSPORT_SPIKE_KAFKA_LITE_VS_JETSTREAM.md  VISION.md
enhancements/: 2026-02-12-counterfactual-run-replayer.md  README.md
examples/agentcore-wrapper-minimal/: README.md
sdk/python/: README.md
sdk/python/relaytrace_strands_adapter/: README.md  pyproject.toml
sdk/python/relaytrace_strands_adapter/src/relaytrace_strands_adapter/: __init__.py  client.py  decorator.py  types.py
sdk/python/relaytrace_strands_adapter/tests/: test_imports.py
skills/radiant-grocery-assistant/: SKILL.md
skills/radiant-grocery-assistant/references/: aisle-taxonomy.md  sale-adapter-contract.md
skills/radiant-grocery-assistant/templates/: shopping-output-schema.json  user-preference-schema.json
specs/: 01-mvp-system-spec.md  02-event-and-api-contract-spec.md  03-auth-reliability-and-ops-spec.md  04-development-work-plan.md  ADAPTER_DECISION_LOG.md  AWS_AGENTCORE_STRANDS_ADAPTER_SPEC.md  approval-event-contract.md  decision-callback-contract.md  outbox-pull-poll-api-contract.md
templates/: agent-wrapper-template.md  approval-card-template.md
