[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "relaytrace-strands-adapter"
version = "0.1.0"
description = "RelayTrace supervisory adapter scaffold for Strands-based agents"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "RelayTrace" }]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
